--- a/src/sass/_headerThanks.sass
+++ b/src/sass/_headerThanks.sass
@@ -19,6 +19,10 @@
 			right: 120px
 			border: 26px solid transparent
 			border-top: 26px solid $blue
+			+r(1024)
+				right: 0
+			+r(750)
+				display: none
 		.oklogo
 			position: absolute
 			top: 169px
