--- a/src/sass/_analytics.sass
+++ b/src/sass/_analytics.sass
@@ -8,41 +8,92 @@
 		background: no-repeat center
 		background-size: cover
 		color: $blue
+		+r(768)
+			padding-top: 99px
+			padding-bottom: 70px
+		+r(480)
+			padding-top: 272px
+			padding-bottom: 18px
 	&-info
 		max-width: 535px
 		padding-left: 43px
 		box-sizing: border-box
+		+r(768)
+			padding-left: 4px
 		.h4
 			font-weight: 900
 			color: $red
 			text-transform: uppercase
+			+r(480)
+				line-height: 28px
+				font-size: 25px
 		.h2
 			margin-top: 15px
 			margin-bottom: 15px
 			font-size: 38px
 			line-height: 41px
 			font-weight: 900
+			+r(480)
+				font-size: 20px
 		p
 			margin-bottom: 10px
 			font-size: 21px
 			line-height: 27px
 			font-weight: 600
+			+r(480)
+				line-height: 24px
+				font-size: 18px
 			&:last-of-type
 				font-size: 16px
 				line-height: 24px
 				font-weight: 500
+				+r(480)
+					line-height: 22px
+					font-size: 15px
 
 .values
 	padding-top: 151px
 	padding-bottom: 96px
+	+r(992)
+		padding-top: 108px
+		padding-bottom: 51px
+	+r(750)
+		padding-top: 68px
+		padding-bottom: 41px
+	+r(480)
+		padding-top: 63px
+		padding-bottom: 37px
 	&__inner
 		justify-content: space-around
+		+r(750)
+			flex-direction: column
+			align-items: center
 	.value
 		position: relative
 		max-width: 350px
 		padding-bottom: 0
 		text-align: center
 		box-sizing: border-box
+		+r(992)
+			margin: 0 20px
+		+r(750)
+			margin: 0
+			margin-bottom: 20px
+		+r(480)
+			position: relative
+			max-width: 405px
+			min-height: 90px
+			margin-bottom: 20px
+			padding: 3px 0 0 95px
+			text-align: left
+		&:first-child
+			+r(992)
+				margin-left: 0
+		&:last-child
+			+r(992)
+				margin-right: 0
+			+r(750)
+				margin-bottom: 0
 		.flex
 			margin-top: 19px
 			margin-bottom: 10px
@@ -50,6 +101,17 @@
 			text-transform: uppercase
 			justify-content: center
 			align-items: center
+			+r(992)
+				height: 48px
+				margin-top: 14px
+				margin-bottom: 5px
+			+r(750)
+				margin: 0
+			+r(480)
+				height: auto
+				margin-bottom: 3px
+				justify-content: flex-start
+				align-items: flex-start
 		p
 			color: $dark_blue
 			line-height: 23px
@@ -62,41 +124,87 @@
 			height: 130px
 			background: url("../img/sprite3.png") no-repeat
 			box-sizing: border-box
+			+r(480)
+				position: absolute
+				top: 0
+				left: 0
+				width: 85px
+				height: 85px
+				background-image: url("../img/sprite3_320.png")
 		&-1
 			&:before
 				background-position: 6px 0
+				+r(480)
+					background-position: 0 2px
 		&-2
 			&:before
 				background-position: -353px 0
+				+r(480)
+					background-position: 0 -139px
 		&-3
 			&:before
 				background-position: -707px 0
+				+r(480)
+					background-position: 0 -280px
 
 .print
 	padding-top: 90px
 	padding-bottom: 100px
 	background-color: $grey
+	+r(1260)
+		padding-top: 46px
+		padding-bottom: 70px
+	+r(480)
+		padding-top: 24px
+		padding-bottom: 55px
 	.container
 		padding: 0
 		max-width: 1203px
 	.flex
 		flex-wrap: wrap
+		+r(1260)
+			flex-direction: column
+			align-items: center
 	&__text
 		max-width: 502px
 		padding-left: 45px
 		padding-right: 20px
 		box-sizing: border-box
+		+r(1260)
+			max-width: 635px
+			padding: 0
+		+r(750)
+			padding: 0 20px
+		+r(480)
+			padding: 0 15px
 		&-1
 			padding-top: 96px
+			+r(1260)
+				margin-bottom: 56px
+				order: 2
+			+r(480)
+				margin-bottom: 20px
 		&-2
 			padding: 89px 40px 0 20px
+			+r(1260)
+				margin-bottom: 33px
+				order: 4
+			+r(480)
+				margin-top: 2px
+				margin-bottom: 28px
 		&-3
 			padding-top: 123px
+			+r(1260)
+				order: 6
 		.h2
 			margin-bottom: 15px
 			text-transform: uppercase
 			line-height: 33px
 			color: $blue
+			+r(480)
+				margin-bottom: 9px
+				font-size: 21px
+				line-height: 24px
 		p
 			line-height: 24px
 			color: #000
@@ -109,26 +217,52 @@
 		position: relative
 		max-width: 701px
 		box-sizing: border-box
+		+r(1260)
+			margin: 0
+			padding: 0
 		&-1
 			margin-bottom: 39px
+			+r(1260)
+				max-width: 714px
+				margin-bottom: 20px
+				order: 1
+			+r(480)
+				margin-bottom: 12px
 		&-2
 			margin-bottom: 2px
+			+r(1260)
+				order: 3
+		&-3
+			+r(1260)
+				order: 5
 		&-phone
 			position: absolute
 			top: 182px
 			right: -11px
+			+r(1260)
+				display: none
 		.windowp
 			width: 100%
+			&-1
+				+r(1260)
+					display: none
 			&-768
-				display: none		
-			
+				display: none
+				+r(1260)
+					display: block
 
 .schedule
 	padding: 50px 55px
 	background: no-repeat center
 	background-size: cover
+	+r(768)
+		padding: 43px 28px 60px
+	+r(480)
+		padding: 26px 14px 30px
 	.container
 		padding: 0 25px
+		+r(480)
+			padding: 0 13px	
 		&-schedule
 			position: relative
 			max-width: 1290px
@@ -136,41 +270,72 @@
 			padding-top: 80px
 			background-color: $blue
 			text-align: center
+			+r(750)
+				padding-top: 40px
 	.h2
 		margin-bottom: 15px
 		font-size: 43px
 		text-transform: uppercase
 		font-weight: 700
+		+r(480)
+			margin-bottom: 10px
+			font-size: 27px
 	p
 		margin: 0 auto
 		max-width: 820px
 		font-size: 21px
 		font-weight: 500
 		line-height: 30px
+		+r(480)
+			font-size: 16px
+			line-height: 24px
 	&__graphic
 		height: 382px
 		background: url('../img/pic_schedule.png') no-repeat bottom center
 		background-size: cover
+		+r(768)
+			height: 352px
+			background-image: url('../img/pic_schedule_768.png')
+		+r(480)
+			height: 265px
 
 .icons-analytics
 	padding-top: 120px
 	padding-bottom: 34px
 	background-color: $red_a
 	text-align: center
+	+r(992)
+		padding-top: 86px
+		padding-bottom: 45px
+	+r(480)
+		padding-top: 46px
+		padding-bottom: 50px
 	.h2
 		margin-bottom: 81px
 		text-transform: uppercase
+		+r(480)
+			margin-bottom: 29px
+			font-size: 27px
+			line-height: 30px
 	.flex
 		flex-wrap: wrap
 		justify-content: space-evenly
+		+r(992)
+			margin: 0 12px
 	.icon
 		width: 330px
 		margin-bottom: 66px
+		+r(992)
+			margin-bottom: 45px
+		+r(480)
+			margin-bottom: 18px
 		p
 			margin-top: 5px
 			font-size: 19px
 			font-weight: 500
 			line-height: 24px
+			+r(480)
+				margin-top: 2px
 		&:before
 			content: ''
 			display: inline-block
@@ -210,20 +375,44 @@
 	padding: 113px 0 110px
 	color: $blue
 	text-align: center
+	+r(1260)
+		padding: 70px 0 93px
+	+r(750)
+		padding: 50px 0
 	.h2
 		margin-bottom: 0
 		text-transform: uppercase
+		+r(750)
+			font-size: 27px
+			line-height: 26px
 	.flex
 		max-width: 1023px
 		margin: 47px auto 0
 		flex-wrap: wrap
 		justify-content: center
+		+r(1260)
+			max-width: 683px
+		+r(750)
+			max-width: 315px
+			margin-top: 15px
+		+r(480)
+			max-width: 285px
 	.partner
 		position: relative
 		margin: 3px 
 		height: 244px
 		background-color: $grey
 		transition: box-shadow 0.3s ease
+		+r(1260)
+			width: 49%
+			height: 244px
+		+r(750)
+			width: 100%
+			margin: 0
+			margin-bottom: 10px
+		&:last-child
+			+r(750)
+				margin-bottom: 0
 		&:hover
 			box-shadow: 0 0 10px 1px $pink
 			.partner-image
