--- a/src/sass/_contact.sass
+++ b/src/sass/_contact.sass
@@ -5,31 +5,68 @@
 	.phrase
 		padding-top: 95px
 		padding-bottom: 140px
+		+r(992)
+			padding-top: 48px
+			padding-bottom: 100px
+		+r(480)
+			padding-top: 19px
+			padding-bottom: 39px
 		.h2
 			margin-bottom: 48px
 			font-size: 44px
 			line-height: 64px
+			+r(992)
+				margin-bottom: 17px
+				font-size: 32px
+				line-height: 64px
+			+r(480)
+				margin-bottom: -4px
+				font-size: 27px
 		.flex
 			max-width: 970px
 			margin: 0 auto
 			justify-content: space-between
+			+r(992)
+				max-width: 720px
+			+r(650)
+				flex-direction: column
+				align-items: center
 			.text
 				max-width: 450px
-				margin: 0 10px 
+				margin: 0 10px
+				+r(992)
+					max-width: 345px
+				+r(650)
+					max-width: 550px
 				p
 					text-align: left
 					font-size: 18px
 					line-height: 30px
+					+r(480)
+						font-size: 17px
+						line-height: 23px
 
 .phrase-devices
 	width: 100%
 	height: 672px
 	background: url('../img/phrase_devices.png') no-repeat bottom
 	background-size: cover
+	+r(992)
+		height: 437px
+		background-image: url('../img/phrase_devices-2.png')
+	+r(480)
+		height: 210px
+		background-image: url('../img/phrase_devices-3.png')
 
 .contact
 	position: relative
 	min-height: 806px
+	+r(992)
+		min-height: 855px
+	+r(750)
+		min-height: 970px
+	+r(480)
+		min-height: 872px
 	&-outer
 		position: absolute
 		top: -223px
@@ -38,8 +75,17 @@
 		max-width: 758px
 		width: 100%
 		background-color: #fff
+		+r(992)
+			top: -115px
+			max-width: 703px
+		+r(750)
+			top: 0
 	&-inner
 		padding-top: 85px
+		+r(992)
+			padding-top: 68px
+		+r(480)
+			padding-top: 33px
 		&-info
 			max-width: 565px
 			margin: 0 auto
@@ -50,17 +96,27 @@
 			.h2
 				margin-bottom: 28px
 				text-transform: uppercase
+				+r(480)
+					margin-bottom: 4px
+					font-size: 27px
 			p
 				font-size: 17px
 				line-height: 21px
+				+r(480)
+					font-size: 16px
+					line-height: 19px
 
 .form_cont
 	margin-top: 31px
+	+r(480)
+		margin-top: 26px 
 	.flex
 		margin-bottom: 25px
 		flex-wrap: wrap
 		flex-direction: column
 		align-items: center
+		+r(480)
+			margin-bottom: 12px
 		.label_cont
 			position: relative
 			margin: 0
@@ -79,6 +135,10 @@
 				background-color: #fff
 				box-sizing: border-box
 				outline: none
+				+r(750)
+					width: 420px
+				+r(480)
+					width: 298px
 				&::placeholder
 					color: $blue
 					font-size: 16px
