--- a/src/sass/_headerNav.sass
+++ b/src/sass/_headerNav.sass
@@ -10,22 +10,38 @@
 		z-index: 101
 		transform: translateX(-1000px)
 		transition: transform 0.6s ease-out
+		+r(992)
+			max-width: 492px
+			padding-left: 150px
+		+r(750)
+			max-width: 385px
+			padding-left: 58px
+			padding-right: 68px
+		+r(480)
+			max-width: 265px
+			padding: 50px 47px 100px 33px
 		&.active
 			transform: translateX(0)
 		&-list
 			ul li 
 				line-height: 44px
+				+r(480)
+					line-height: 35px
 				a
 					font-size: 26px
 					font-weight: 500
 					color: #f0f0f0
 					transition: color 0.3s ease
+					+r(480)
+						font-size: 20px
 					&:hover
 						color: $red
 		&-social
 			display: inline-block
 			margin-top: 114px
 			margin-bottom: 65px
+			+r(480)
+				margin-top: 60px
 			a
 				margin-right: 20px
 				color: #f0f0f0
@@ -58,6 +74,13 @@
 	height: 16px
 	cursor: pointer
 	z-index: 100
+	+r(992)
+		left: 541px
+	+r(750)
+		left: 434px
+	+r(480)
+		top: 16px
+		left: 281px
 	&:before, &:after
 		content: ''
 		position: absolute
@@ -66,6 +89,8 @@
 		height: 3px
 		background-color: $blue
 		border-radius: 25%
+		+r(480)
+			background-color: #fff
 	&:before
 		top: 6.5px
 		transform: rotate(45deg)
