--- a/src/templates/layouts/_layout.njk
+++ b/src/templates/layouts/_layout.njk
@@ -5,6 +5,7 @@
   {% include "layouts/_head.njk" %}
 </head>
 <body>
+<noscript>Your browser does not support JavaScript! Please turn on JavaScript</noscript>
 
 <!-- BEGIN content -->
 <div class="out">
