--- a/src/templates/partials/_footer.njk
+++ b/src/templates/partials/_footer.njk
@@ -32,11 +32,11 @@
 				<a href="tel:+351211306637">351 211 306 637</a>
 				<p>Schulstrasse 4, 32547 Bad Oyenhausen, GERMANY</p>
 				<div class="footer__social">
-					<a href="#"><i class="icon-facebook"></i></a>
-					<a href="#"><i class="icon-twitter"></i></a>
-					<a href="#"><i class="icon-play"></i></a>
-					<a href="#"><i class="icon-instagram"></i></a>
-					<a href="#"><i class="icon-linkedin"></i></a>
+					<a href="#"><i class="fa icon-facebook"></i></a>
+					<a href="#"><i class="fa icon-twitter"></i></a>
+					<a href="#"><i class="fa icon-play"></i></a>
+					<a href="#"><i class="fa icon-instagram"></i></a>
+					<a href="#"><i class="fa icon-linkedin"></i></a>
 				</div>
 			</div>
 		</div>
